--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -397,11 +397,11 @@ jobs:
                     --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             for WorkflowID in "${STACKS[@]}"
             do
-              if [[ "${WorkflowID:-7}" =~ "${CIRCLE_WORKFLOW_ID:0:7}" ]]
+              if [[ "${WorkflowID:-7}" == "${CIRCLE_WORKFLOW_ID:0:7}" ]]
               then
                 echo "No stack available to be removed"
               else
-                aws s3 rm "s3://udapeople-${WorkflowID: -7}" --recursive
+                aws s3 rm "s3://udapeople-${WorkflowID:-7}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backendinfra-${WorkflowID:-7}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontendinfra-${WorkflowID:-7}"
             fi
