--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -9,6 +9,11 @@
   apt:
     upgrade: "yes"
 
+- name: "extract the zipped artifact"
+  unarchive:
+    src: ~/project/artifact.tar.gz
+    dest: ~/
+
 - name: "Install dependency NodeJS and NPM"
   become: true
   apt:
@@ -21,17 +26,9 @@
   npm:
     name: pm2
     global: yes
-    state: latest
-    production: yes
-
-- name: extract artifact
-  become: true
-  unarchive:
-    src: files/artifact.tar.gz
-    dest: .
 
 - name: "start the app"
-  become: true
   shell: |
-    pm2 stop all
+    npm install
+    pm2 stop default
     pm2 start npm -- start
